Fix final SonarQube warnings